--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <link rel="icon" sizes="40x40" type="image/png" href="./public/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <title>Building BHARAT</title>
+
 </head>
 
 <body>
