react compoent optimization

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <link rel="icon" sizes="40x40" type="image/png" href="./public/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Building BHARAT</title>
-
+  <meta name="description"
+    content="youth-led political and governance consulting firm using AI, data intelligence, and behavioral insights to modernize Indian politics.">
 </head>
 
 <body>
